# fedora_update_util

./: Cargo.toml  README.md  fedora-update-utility.spec  fedora_update_utility.spec  meson.build
data/: dev.bedsteler20.FedoraUpdateUtility.desktop  dev.bedsteler20.FedoraUpdateUtility.metainfo.xml  fedora_update_utility.service  fedora_update_utility.timer  meson.build
src/: app.rs  dnf.rs  main.rs  main_window.blp  main_window.rs  meson.build  package_manager.rs  update_window.blp  update_window.rs  utils.rs
src/package_manager/: dnf.rs  mod.rs
src/view/: done_page.blp  done_page.rs  download_page.blp  download_page.rs  error_page.blp  error_page.rs  loading_page.blp  loading_page.rs  main_window.blp  main_window.rs  mod.rs  up_to_date_page.blp  up_to_date_page.rs  update_page.blp  update_page.rs
