[package]
name = "fedora_update_utility"
version = "1.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.5.3", package = "libadwaita", features = ["gtk_v4_10", "v1_4"] }
async-process = "2.0.1"
gtk = { version = "0.7.3", package = "gtk4", features = ["gnome_45", "blueprint", "xml_validation"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
surf = "2.3.2"
vte = { version = "0.0.2", package = "zoha-vte4" }
