install_data(
    'dev.bedsteler20.FedoraUpdateUtility.desktop',
    install_dir: get_option('datadir') / 'applications'
)

install_data(
    'dev.bedsteler20.FedoraUpdateUtility.metainfo.xml',
    install_dir: get_option('datadir') / 'metainfo'
)

install_data(
    'fedora_update_utility.service',
    install_dir: systemd_userunitdir
)

install_data(
    'fedora_update_utility.timer',
    install_dir: systemd_userunitdir
)